Fix display window placment and size, fix button size and text alignment

--- a/jscalc.css
+++ b/jscalc.css
@@ -3,12 +3,14 @@
   margin-bottom: 5px;
 }
 .calc_display {
-  position: absolute;
   right: 0px;
-  width: 300px;
+  width: 265px;
+  height: 20px;
   border: 3px solid #73AD21;
   padding: 10px;}
 .myButton {
+  width: 30px;
+  text-align: center;
 	-moz-box-shadow: 3px 4px 0px 0px #899599;
 	-webkit-box-shadow: 3px 4px 0px 0px #899599;
 	box-shadow: 3px 4px 0px 0px #899599;
